# Terminal-LLM-Client

./: .gitignore  LICENSE  README.md  pyproject.toml
ariya/ariya2/: hello.py
llm_cli/: llm_cli.py
llm_cli/llm_cli_helper/: chat.py  prompt.py  shell.py
llm_cli/llm_cli_helper/chat_helper/: claude.py  gpt.py
llm_cli/llm_cli_helper/prompt_helper/: response.py
llm_cli_python/src/llm_cli_helper/: chat.py  prompt.py
llm_cli_python/src/llm_cli_helper/chat_helper/openai/: chat_completion.py  model.py
src/: llm_cli.py
src/llm_cli_helper/prompt_helper/: response.py
