[tool.poetry]
name = "llm-cli"
version = "0.1.0"
description = "A command-line interface for LLM"
authors = ["Ariya Amarjargal <amarj003@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
termcolor = "^2.4.0"
halo = "^0.0.31"
anthropic = "^0.34.2"
openai = "^1.45.1"

[tool.poetry.scripts]
llm = "llm_cli.llm_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"